Fix alignment issues with stretched images in Firefox

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -192,11 +192,13 @@ h4 {
     }
 
     .logo {
+        display: flex;
+        height: 150px;
+        align-items: center;
+
         a {
-            display: flex;
-            height: 150px;
-            justify-content: center;
-            align-items: center;
+            width: 100%;
+            text-align: center;
         }
         img {
             max-width: 100%;
